# aseview

./: .gitignore  AGENTS.md  DEPLOY.md  MANIFEST.in  MnH28C26(N2Cl)2.cif  README.md  butadiene.xyz  data.json  debug_lines.py  examples.py  mkdocs.yml  molecular_viewer_example.html  molecular_viewer_from_json.html  normal_viewer_example.html  overlay_render_snippet.js  overlay_viewer_example.html  pyproject.toml  rxn1.html  rxn1.xyz  rxn2.html  rxn2.xyz  rxn2_re.xyz  test.xyz  test_jupyter.ipynb  test_molecular_viewer.ipynb
.github/hooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  publish-vscode.yml  publish.yml  sync-vscode-bundle.yml
aseview/: AGENTS.md  __init__.py  __main__.py  _export_playwright.py  cli.py  export.py  hessian_parsers.py  jupyter.py  utils.py  viewer.py  viewer_v1.py  viewers.py  wrapper.py
aseview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aseview/static/js/: aseview.js  styles.bakup.js  styles.js
aseview/templates/: frag_selector.html  lite_viewer.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
aseview/themes/dark/: frag_selector.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
aseview/themes/darkgreen/: frag_selector.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
aseview/themes/glass/: frag_selector.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
aseview/themes/simple/: frag_selector.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
aseview/themes/spring/: frag_selector.html  molecular_viewer.html  normal_viewer.html  overlay_viewer.html
docs/: AGENTS.md  cli-reference.md  demo.html  file-formats.md  generate_examples.py  index.md  js-module.md  styles.md  theming.md
docs/api/: frag-selector.md  molecular-viewer.md  normal-viewer.md  overlay-viewer.md
docs/assets/examples/: dimer.xyz  ethanol.xyz  water.xyz
docs/assets/viewers/: aspirin_charges.html  benzene_glossy.html  caffeine.html  carbazole_rings.html  carbon_nanotube.html  casio3_polyhedron.html  copper_fcc.html  cu111_fixed.html  ethanol_charges.html  ethanol_neon.html  (+14 more)
docs/examples/: basic.md  frag-selector.md  lite-view.md  normal-modes.md  overlay.md  polyhedron-rings.md  solid-state.md  trajectory.md
docs/getting-started/: installation.md  quickstart.md
docs/playground/: index.html
docs/stylesheets/: extra.css
js/: styles.js
old/: index.html
old/js/: styles.js
static/: molecular_viewer.html.backup  normal_viewer.html.backup  overlay_viewer.html.backup
test_js_module/: README.md  package.json  rollup.config.js
test_js_module/examples/: demo-umd.html  demo.html
test_js_module/src/: index.js
tests/: AGENTS.md  test_imports.py  test_js_api_camera_export.py  test_js_syntax.py  test_molecular_data.py  test_molecular_template_camera_export.py  test_normal_template_camera_export.py  test_overlay_template_camera_export.py  test_performance.py  test_python_image_export_api.py  test_viewer_camera_settings.py  test_viewers.py
vscode-extension/: .gitignore  .vscodeignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/media/: molecular_viewer.html  molecular_viewer_bundle.html  styles.js
vscode-extension/node/: parse_with_ase_ts.mjs  write_with_ase_ts.mjs
vscode-extension/python/: render_viewer.py
vscode-extension/scripts/: bundle-viewer.cjs
vscode-extension/src/: extension.ts
(+6 files in other folders)
