[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aseview"
version = "0.1.0"
description = "A molecular viewer for ASE (Atomic Simulation Environment) data"
readme = "README.md"
authors = [{name = "aseview"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "ase",
    "ipywidgets",
    "jupyter",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aseview*"]

[tool.setuptools.package-data]
aseview = [
    "templates/*.html",
    "static/js/*.js",
    "static/js/vendor/*.js",
]

[project.scripts]
aseview = "aseview.cli:cli"
aseview2 = "aseview.cli:cli"
